syntax = "proto3";

package auth;

option csharp_namespace = "StereoMix.Auth";
option cc_enable_arenas = true;

service AuthService {
  rpc GuestLogin(GuestLoginRequest) returns (LoginResponse);

  rpc ValidateUserToken(ValidateUserTokenRequest) returns (ValidateUserTokenResponse);
}

message GuestLoginRequest {
  string user_name = 1;
}

message LoginResponse {
  string token = 2;
}

message ValidateUserTokenRequest {
  string token = 1;
}

message ValidateUserTokenResponse {
  bool is_valid = 1;
  string user_id = 2;
  string user_name = 3;
}
